# matplotlib

./: .appveyor.yml  .gitignore  azure-pipelines.yml  environment.yml  meson.build  meson_options.txt  setupext.py
.circleci/: config.yml
.github/workflows/: cibuildwheel.yml  clean_pr.yml  reviewdog.yml  tests.yml
doc/api/next_api_changes/behavior/: 18794-ES.rst
doc/faq/: howto_faq.rst
doc/users/next_whats_new/: quiverkey.rst
examples/pylab_examples/: centered_ticklabels.py  date_demo_rrule.py  patheffect_demo.py
examples/user_interfaces/: embedding_webagg_sgskip.py
lib/: meson.build
lib/matplotlib/: axis.py  collections.py  collections.pyi  colors.py  contour.py  figure.py  markers.pyi  path.py  quiver.py
lib/matplotlib/backends/: _backend_tk.py  backend_gtk4.py  backend_pdf.py  backend_ps.py  backend_webagg.py
lib/matplotlib/backends/web_backend/: all_figures.html  single_figure.html
lib/matplotlib/projections/: polar.py
lib/matplotlib/tests/: test_axes.py  test_backend_webagg.py  test_backends_interactive.py  test_collections.py  test_colors.py  test_quiver.py
lib/matplotlib/tests/baseline_images/test_backend_ps/: multi_font_type3.eps  multi_font_type42.eps
lib/mpl_toolkits/mplot3d/: axes3d.py
requirements/testing/: all.txt
src/: _ttconv.cpp  meson.build
subprojects/: qhull.wrap
subprojects/packagefiles/qhull-2020.2/: meson.build
